# ConsoleApplication

./: .gitignore  CMakeLists.txt  ConsoleApplication.sln
.github/workflows/: continuousintegration.yml  discord.yml
ConsoleAppCmake/: CMakeLists.txt  ConsoleAppCmake.cpp  ConsoleAppCmake.h  mathClass.cpp
ConsoleApplication/: ConsoleApplication.cpp  ConsoleApplication.vcxproj  ConsoleApplication.vcxproj.filters  ConversionClass.cpp  Dockerfile
